--- a/backend/src/data/local/mail/registration.html
+++ b/backend/src/data/local/mail/registration.html
@@ -3,5 +3,5 @@
 <p>
   You've recieved this email, because someone used this email while registrating
   on our growup website. If it was you, then confirm and continue your
-  registration by link http://localhost:3000/registration/12341415
+  registration by link {{ url }}
 </p>
