fix: html files for building

--- a/backend/src/data/local/mail/registration.html
+++ b/backend/src/data/local/mail/registration.html
@@ -3,5 +3,5 @@
 <p>
   You've recieved this email, because someone used this email while registrating
   on our growup website. If it was you, then confirm and continue your
-  registration by link {{ url }}
+  registration by link <a href="{{ url }}">{{ url }}</a>
 </p>
