--- a/landing/index.html
+++ b/landing/index.html
@@ -148,7 +148,7 @@
               <div
                 class="ability__img-wrapper anim-elem anim-elem-left anim-no-hide anim-x"
               >
-                <img src="./images/ablitiy-3.png" alt="Photo" />
+                <img src="./images/ability-3.png" alt="Photo" />
               </div>
             </div>
             <div class="ability__text-block col-5 anim-elem anim-no-hide">
