#181 Changed the link for buttons

--- a/landing/index.html
+++ b/landing/index.html
@@ -45,12 +45,14 @@
           <a
             href="https://bsa-growup.herokuapp.com/login"
             class="btn header__btn header__btn--log-in pink-color"
+            target="_blank"
           >
             Log In
           </a>
           <a
             href="https://bsa-growup.herokuapp.com/signup"
             class="btn btn-try-now purple-color"
+            target="_blank"
           >
             Try Now
           </a>
@@ -73,6 +75,7 @@
             <a
               href="https://bsa-growup.herokuapp.com/signup"
               class="btn first-screen__btn"
+              target="_blank"
             >
               Try Now
             </a>
@@ -204,7 +207,14 @@
             Your people.
           </h2>
           <div class="get-started__description">Ready to get started?</div>
-          <a href="" class="btn get-started-btn" scroll="disable"> Try Now </a>
+          <a
+            href="https://bsa-growup.herokuapp.com/signup"
+            target="_blank"
+            class="btn get-started-btn"
+            scroll="disable"
+          >
+            Try Now
+          </a>
         </div>
       </div>
       <div class="get-started__section-bg">
