Changed some text in mail

--- a/backend/src/data/local/mail/registration.html
+++ b/backend/src/data/local/mail/registration.html
@@ -560,7 +560,7 @@
                                         font-size: 20px;
                                       "
                                     >
-                                      You've recieved this email, because
+                                      You've received this email, because
                                       someone used this email while registrating
                                       on our GrowUp website.
                                     </p>
@@ -695,7 +695,7 @@
                                           "
                                         ></span></span
                                       >your registration by<strong>
-                                        link bellow&nbsp;👇</strong
+                                        link below&nbsp;👇</strong
                                       >
                                     </p>
                                   </td>
